--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
+    "iview-loader": "^1.3.0",
     "markdown-it": "^12.0.2",
     "markdown-it-anchor": "^6.0.0",
     "markdown-it-chain": "^1.3.0",
@@ -34,7 +34,8 @@
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
     "transliteration": "^2.1.11",
-    "vue-markdown-loader": "^2.4.1",
+    "view-design": "^4.4.0",
+    "vue-router": "^3.4.8",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
