--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,11 @@
 examples/
 src/
 public/
+demo/
+dist/
+md-loader/
+package-lock.json
+yarn.lock
 vue.config.js
 postcss.config.js
 babel.config.js
