--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zm-tree-org",
-  "version": "2.0.3",
+  "version": "2.1.0-beta.1",
   "author": "zzh",
   "private": false,
   "main": "lib/zm-tree-org.common.js",
